Avances (HU, Diagramas, Mockups)
Se realiza el diagrama entidad relación, se mejoran algunas historias de usuarios y se agregan otras, se crean mockups de búsqueda, solicitud y resolución. Ademas se crea el mapa de navegación y la linea de diseño del proyecto

--- a/Informe/Propuesta/1_Descripcion_del_proyecto/2_Contexto_del_proyecto.tex
+++ b/Informe/Propuesta/1_Descripcion_del_proyecto/2_Contexto_del_proyecto.tex
@@ -1,6 +1,6 @@
 El plan estratégico de la Universidad de Talca, destaca el apoyo a todo tipo de actividades emprendidas por las distintas Organizaciones Estudiantiles reconocidas. Entre las actividades destacan: recepción de alumnos nuevos, celebración del día de la carrera, actividades culturales y deportivas, actividades sociales, entre otras. \cite{5}
 
-Para la realización de estas actividades se debe seguir un procedimiento, el cual está estipulado en la RU2083, la cual dice:
+Para la realización de estas actividades se debe seguir un procedimiento, el cual está estipulado en la RU2083 creada el 12 de diciembre del 2017, la cual dice:
 
 \begin{tasks}[counter-format = {tsk[A].}]
 	\task \textbf{Caso Federación y Organizaciones Estudiantiles:}
