--- a/Informe/Propuesta/1_Descripcion_del_proyecto/4_Trabajo_relacionado.tex
+++ b/Informe/Propuesta/1_Descripcion_del_proyecto/4_Trabajo_relacionado.tex
@@ -1,3 +1,6 @@
 %\emph{(Esta sección debe incluir los enfoques usados actualmente para resolver el problema. Esta sección debe contener referencias bibliográficas a trabajos relacionados al proyecto.) Esta sección responde a la pregunta ¿Qué se ha hecho para resolver el problema?}
 
-Actualmente existe un formato estándar que se encuentra la pagina de Controlaría de la Universidad de Talca \cite{6} , pero cada vez que hay nuevos mandatos tanto de Federación como CCAA se debe realizar una capacitación para que los encargados puedan realizar las rendiciones. Esta información no todos lo saben o es muy difícil de comprender, por ende, se debe aprender en el proceso de creación y error de la documentación
+Actualmente existe un formato estándar hecho en Microsoft Excel, el cual se encuentra en la página de Contraloría de la Universidad de Talca~\cite{6}, pero cada vez que hay cambio de mandatos de las O.E. se debe realizar una capacitación para que los encargados puedan realizar rendiciones. Aun así, la capacitación es vaga y las O.E. deben aprender bajo el proceso,cometiendo muchos errores.
+Una aplicación que realiza procesos similares es el ``Sistema de gestión de declaración de gastos en líneas (SDGL) PROGRAMA FONDECYT''~\cite{9}.
+Por otra parte, una de las funcionalidades de la aplicación que se está realizando es que se pueda visualizar el estado de una rendición y aplicaciones similares que tienen este tipo de funcionalidad son las aplicaciones de compra online, en donde se puede visualizar el estado de envío del producto. Algunas de ellas son Wish~\cite{10}, Correos Chile~\cite{11}, AliExpress~\cite{12}, Amazon~\cite{13}, entre otras.
+
