--- a/Informe/Propuesta/2_Objetivos/1_Objetivo_general.tex
+++ b/Informe/Propuesta/2_Objetivos/1_Objetivo_general.tex
@@ -1,7 +1,5 @@
 \paragraph{Objetivo general}
 %\emph{(Debe ser una sola frase que resuma lo que se quiere lograr.)} 
 \begin{itemize}
-\item Desarrollar un sistema web que permita a los distintos Presidentes o Tesoreros o Secretarios de Finanzas de las Organizaciones Estudiantiles, gestionar una rendicion después de haber realizado la actividad a cargo.
+\item Sistematizar el proceso de confección de la solicitud de un fondo por rendir para actividades estudiantiles y su posterior rendición de gastos, de acuerdo al marco definido por la RU N\grad 2083 del año 2017.
 \end{itemize}
-
-%Apoyar el proces de la elaboración de rendiciones a los distintos Presidentes o Tesoreros o Secretarios de Finanzas de las Organizaciones Estudiantiles de la Facultad de Ingeniería de la Universidad de Talca, después de haber realizado la actividad a cargo.
