--- a/Informe/Propuesta/3_Alcances/3_Alcances.tex
+++ b/Informe/Propuesta/3_Alcances/3_Alcances.tex
@@ -6,33 +6,25 @@
 %\end{itemize}
 
 
-Se realizará un sistema web de gestión de rendiciones para Federación y CCAA de la Facultad de Ingeniería de la Universidad de Talca, en el cual se podrán realizar las siguientes funciones:
+Se realiza un sistema web de gestión de rendiciones para Federación y CAA de la Facultad de Ingeniería de la Universidad de Talca, en el cual se podrán realizar las siguientes funciones:
 
 \begin{itemize}
-	\item Gestionar rendiciones.
+	\item Realizar solicitudes de fondos por rendir que detallen en que se utiliza el dinero, participantes de la actividad, periodo en la que se realiza y responsable.
+
+	\item Gestionar rendiciones de fondos por rendir que detallen los gastos incurridos de una actividad tras ser aprobada su correspondiente solicitud.
 	
 	\item Búsqueda de rendiciones realizadas por filtrado tales como fecha o número de rendición.
 	
-	\item Visualización detallada de rendiciones
+	\item Visualización detallada de rendiciones.
 	
-	\item Búsqueda de suma montos de gastos de la rendición, similar o igual al monto solicitud más no superior.
+	\item Búsqueda de suma de montos de gastos de la rendición, similar o igual al monto solicitud, mas no superior.
 	
 	\item Validación de fechas de boletas ingresadas dentro de la actividad realizada.
 \end{itemize}
 
+\begin{itemize}
+	\item 	\begin{description}
+			    \item[Nota:] Cabe destacar que el sistema opera bajo la RU N\grad 2083 del año 2017.
+			\end{description}
+\end{itemize}
 
-%\begin{itemize}
-	%\item Los usuarios podrán crear una rendición en la cual contemple fecha del documento, nombre del proveedor, breve descripción del gasto, monto del gasto.
-
-	%\item Los usuarios podrán crear ademas a personas que hayan participado en la actividad, y detallar los gastos que tuvo en esta.
-
-	%\item Los usuarios podrán revisar rendiciones anteriores (si es que existen).
-
-	%\item Una vez finalizada una rendición, no se podrá editar.
-
-	%\item Los usuarios podrán buscar rendiciones creadas con anterioridad a través de filtros tales como, fecha o numero de rendición.
-
-	%\item El sistema debe validar de que se cumplan con los montos solicitados y que las fechas de las boletas ingresadas estén dentro del periodo de la actividad realizada.
-
-	%\item El sistema debe tener un algoritmo en el cual se busque la suma montos de gastos de la rendición, similar o igual al monto solicitud más no superior.
-%\end{itemize}
