--- a/Informe/Propuesta/4_Metodologia/1_Metodologia_de_desarrollo.tex
+++ b/Informe/Propuesta/4_Metodologia/1_Metodologia_de_desarrollo.tex
@@ -2,32 +2,31 @@
 
 %\emph{(La longitud máxima de esta sección es de 1 página.)}
 
-La metodología a utilizar será la metodología de desarrollo ágil Melé. \cite{7}
+La metodología a utilizar es la metodología de desarrollo ágil Melé\footnote{Desde la Séptima Edición del libro ``Ingenieria del software. Un enfoque practico.'' del Ph.D. Roger S. Pressman, es llamado Scrum }~\cite{7}.
 
-Los principios de esta metodología guían las actividades dentro de un proceso que incorpora las siguientes actividades del marco de trabajo: \emph{(requisitos, análisis, diseño, evolución y entrega)}. En cada actividad del marco de trabajo las tareas de trabajo suceden dentro del patrón de proceso llamado \emph{Sprint}. El trabajo realizado en un Sprint se adapta al problema y con frecuencia se modifica en tiempo real.
+Los principios de esta metodología guían las actividades dentro de un proceso que incorpora las siguientes actividades del marco de trabajo: \emph{requisitos, análisis, diseño, evolución y entrega}. En cada actividad mencionadas anteriormente, suceden dentro del patrón de proceso llamado \emph{Sprint}. El trabajo realizado en un Sprint se adapta al problema y con frecuencia se modifica en tiempo real.
 
 \begin{figure}[!hb]
 	\includegraphics[width=\textwidth]{Imagenes/mele.jpg}
-	\label{}
-	\caption{Proceso de metodología Melé}
+	\caption{\label{procesoMele} Proceso de metodología Melé.}
 \end{figure}
 
-Melé tiene un conjunto de \emph{"patrones de proceso de software"} los cuales define un conjunto de actividades de desarrollo:
+En la \textbf{Figura~\ref{procesoMele}} se puede observar que Melé tiene un conjunto de \emph{``patrones de proceso de software''} los cuales define un conjunto de actividades de desarrollo:
 
 \begin{itemize}
 	\item 	\begin{description}
-			    \item[Retrasos:] son una lista que considera la prioridad de los requisitos o características del proyecto que proporcionan valor comercial para el cliente. En cualquier momento se pueden agregar elementos a os retrasos. El gerente de producto evalúa los retrasos y actualiza las prioridades de acuerdo con lo requerido. 
+			    \item[Retrasos:] lista que considera la prioridad de los requisitos o características del proyecto que proporcionan valor comercial para el cliente. En cualquier momento se pueden agregar elementos a los retrasos. El gerente de producto evalúa los retrasos y actualiza las prioridades de acuerdo con lo requerido. 
 			\end{description}
 
 	\item 	\begin{description}
-			    \item[Sprint:] consiste en unidades de trabajo que se requieren para satisfacer un requisito definido en los retrasos en un periodo predefinido (el lapso usual es de 30 días). En esta etapa, los elementos de los retrasos a los que se dirigen las unidades de trabajo del Sprint están congelados (es decir, durante le Sprint no se introducen cambios). Por lo tanto, el Sprint permite trabajar en un ambiente enfocado al corto plazo, pero estable.
+			    \item[Sprint:] unidades de trabajo que se requieren para satisfacer un requisito definido en los retrasos en un periodo predefinido (el lapso usual es de 30 días). En esta etapa, los elementos de los retrasos a los que se dirigen las unidades de trabajo del Sprint están congelados (es decir, durante el Sprint no se introducen cambios). Por lo tanto, el Sprint permite trabajar en un ambiente enfocado al corto plazo, pero estable.
 			\end{description}
 
 	\item 	\begin{description}
 			    \item[Reuniones:] reuniones cortas (por lo general 15 minutos) y las realiza a diario el equipo de Melé. Existen 3 preguntas que plantean y responden todos los miembros del equipo:
 
 			    \begin{itemize}
-			    	\item ¿Qué hiciste desde la semana pasada?
+			    	\item ¿Qué hiciste desde la última reunión?
 
 			    	\item ¿Cuáles obstáculos encontraste? 
 
@@ -44,14 +43,14 @@ Melé tiene un conjunto de \emph{"patrones de proceso de software"} los cuales d
 
 
 
-Los motivos por los cuales este método se implementará son:
+Los motivos por los cuales se utiliza este método son:
 
 \begin{itemize}
 	\item Completa participación del cliente y prueba de funcionalidades para obtener retroalimentación.
 
 	\item Se pueden obtener los cambios y adaptarse al proyecto en cada Sprint.
 
-	\item Como la idea principal es realizar rendiciones y se han aclarado algunos requerimientos, más no son todos, es que se espera que el proyecto aumente en el proceso de desarrollo. Es por esta incertidumbre que se escoge la metodología Melé, ya que ayuda al cliente y al equipo de trabajo a definir los requisitos del proyecto.
+	\item Como la idea principal es realizar rendiciones y se han aclarado algunos requerimientos, mas no son todos, es que se espera que el proyecto aumente en el proceso de desarrollo. Es por esta incertidumbre que se escoge la metodología Melé, ya que ayuda al cliente y al equipo de trabajo a definir los requisitos del proyecto.
 \end{itemize}
 
 %\begin{figure}
@@ -60,4 +59,3 @@ Los motivos por los cuales este método se implementará son:
 %  \caption{Mi Figura}
 %  \label{fig:ejemplo}
 %\end{figure}
-
