--- a/Informe/Propuesta/bibliografia.bib
+++ b/Informe/Propuesta/bibliografia.bib
@@ -47,3 +47,27 @@
 }
 
 
+@MISC{9,
+  title = {Instrucciones generales para la rendición de cuentas de los fondos asignados a través del beneficio complementario de beca doctorado nacional y para extranjeros sin residencia definitiva en chile: Asignación anual para gastos operacionales del proyecto de tesis doctoral etapas 2017},
+  howpublished = {http://www.conicyt.cl/becasconicyt/files/2017/02/manual\_rendicionGOp\_2017.pdf},
+}
+
+@MISC{10,
+  title = {Wish},
+  howpublished = {https://www.wish.com/},
+}
+
+@MISC{11,
+  title = {Correos Chile},
+  howpublished = {https://www.correos.cl/SitePages/home.aspx},
+}
+
+@MISC{12,
+  title = {AliExpress},
+  howpublished = {https://cl.aliexpress.com/},
+}
+
+@MISC{13,
+  title = {Amazon},
+  howpublished = {https://www.amazon.es/},
+}
