--- a/Informe/Propuesta/2_Objetivos/2_Objetivo_especifico.tex
+++ b/Informe/Propuesta/2_Objetivos/2_Objetivo_especifico.tex
@@ -1,22 +1,11 @@
-\paragraph{Objetivos específicos} %\emph{(Una lista de puntos que detallan el objetivo general.)}
-%\begin{itemize}
-%	\item Especificar los requerimientos del proyecto.
-%	\item Diseñar un algoritmo para ...
-%	\item Construir una herramienta para ...
-%	\item Evaluar el sistema a través de ... 
-%\end{itemize}
-
+\paragraph{Objetivos específicos} 
 
 \begin{itemize}
-	\item Especificar los requerimientos del proyecto.
+	\item Modelar el proceso de confección de solicitudes de fondos por rendir.
 
-	\item Diseñar el procedimiento que se debe realizar para creación de una rendición.
+	\item Modelar el proceso de rendición de gastos.
 
-	\item Determinar y validar los requisitos de la solución.
-
-	\item Definir el diseño y la arquitectura de software del sistema propuesto.
-
-	\item Construir un sistema web que implemente sistema de gestión de rendiciones.
+	\item Desarrollar una aplicación web que asista al proceso de solicitud de fondos por rendir y su posterior rendición de gastos.
 
 \end{itemize}
 
