--- a/Informe/Propuesta/propuesta.tex
+++ b/Informe/Propuesta/propuesta.tex
@@ -16,12 +16,12 @@
 \pagestyle{empty}
 
 \title{
-Sistema de gestión de rendiciones para Federación y CCAA de la Facultad de Ingeniería de la Universidad de Talca\\
-(Propuesta de proyecto final de carrera)}
+    Gestión de fondos para actividades estudiantiles conducidas por CCAA o la Fedeut Curicó en acuerdo a la RU N\grad 2083 del año 2017\\
+    (Propuesta de proyecto final de carrera)}
 
 \author{
 Yorch Wilian Sepúlveda Manríquez (Estudiante)\\
-Yamisleydi Salgueiro Sicilia (Profesor guía)\\
+Rodrigo Paredes Moraleda (Profesor guía)\\
 Carrera de Ingeniería Civil en Computación\\ 
 Universidad de Talca}
 
@@ -31,6 +31,10 @@ Universidad de Talca}
 
 
 \section{Descripción de la propuesta}
+
+Las Organizaciones Estudiantiles de la Universidad de Talca son las encargadas de gestionar muchas actividades para la comunidad estudiantil tales como la bienvenida de alumnos nuevos, aniversario de carrera, actividades culturales y deportivas, entre otras, y para ello se debe realizar un conjunto de procedimientos tales como la aprobación de solicitud, envío de la Resolución Universitaria, Rendiciones de Cuentas, entre otros. Pero la finalidad de esta propuesta está en el proceso de Rendiciones que detallan los gastos incurridos de las actividades realizadas por las Organizaciones Estudiantiles, en donde se centra el gran problema y es el que se pretende solucionar. Por lo tanto, en las siguientes páginas se muestra la propuesta de solución en donde se puede observar los Conceptos Básicos del Proyecto, el Contexto de trabajo de las Organizaciones Estudiantiles, la Descripción del Problema, Trabajos Relacionados, entre otros.
+
+
 
 \subsection{Conceptos básicos del proyecto} 
 \subfile{1_Descripcion_del_proyecto/1_Conceptos_basicos}
