--- a/Informe/Propuesta/1_Descripcion_del_proyecto/2_Contexto_del_proyecto.tex
+++ b/Informe/Propuesta/1_Descripcion_del_proyecto/2_Contexto_del_proyecto.tex
@@ -1,8 +1,8 @@
-El plan estratégico de la Universidad de Talca, destaca el apoyo a todo tipo de actividades emprendidas por las distintas Organizaciones Estudiantiles reconocidas. Entre las actividades destacan: recepción de alumnos nuevos, celebración del día de la carrera, actividades culturales y deportivas, actividades sociales, entre otras~\cite{5}.
+El ``Plan estratégico de la Universidad de Talca Visión 2020'', destaca el apoyo a todo tipo de actividades emprendidas por las distintas Organizaciones Estudiantiles reconocidas. Entre las actividades destacan: recepción de alumnos nuevos, celebración del día de la carrera, actividades culturales y deportivas, actividades sociales, entre otras~\cite{5}.
 
-\begin{figure}[!h]
+\begin{figure}[!p]
 	\includegraphics[width=\textwidth]{Imagenes/Solicitud_Federacion.jpg}
-	\caption{\label{Solicitud_Federacion}Proceso fondos por rendir por parte de Fedeut.}
+	\caption{\label{fig: Solicitud_Federacion}Proceso de Fondos por Rendir por parte de Fedeut.}
 \end{figure}
 
 Para la realización de estas actividades se debe seguir un procedimiento, el cual está estipulado en la RU N\grad 2083 creada el 12 de diciembre del 2017, la cual dice:
@@ -10,28 +10,33 @@ Para la realización de estas actividades se debe seguir un procedimiento, el cu
 \begin{tasks}[counter-format = {tsk[A].}]
 	\task \textbf{Caso Federación y Organizaciones Estudiantiles:}
 
-	El Presidente, Tesorero o Secretario Financiero, es quien debe solicitar por escrito los Fondos aprobados para cada actividad al Director de DAAE, de la Vicerrectoría de Desarrollo Estudiantil, al menos 20 días previo al inicio de la actividad.
+	Solo el Presidente, Tesorero o Secretario de finanzas deben solicitar por escrito Fondos para realizar actividades. Esta solicitud se envía a quien dirige la Dirección del DAAE, de la Vicerrectoría de Desarrollo Estudiantil, al menos 20 días antes del inicio de la actividad. 
 
-	El Director DAAE da visado a la solicitud de fondo para luego ser dirigida al Vicerrector de Desarrollo Estudiantil.
+	Una vez que quien dirige la Dirección del DAAE, verifica la solicitud enviada por Fedeut y aprueba, realiza otra solicitud y la envía a quien dirige la Vicerrectoría de Desarrollo Estudiantil
 
-	El Vicerrector de Desarrollo Estudiantil luego de aprobar la solicitud de fondo, debe emitir una Resolución Exenta, original con cuatro copias y enviar a Contraloría de la Universidad de Talca para el respectivo control de legalidad. Una vez totalmente tramitado el acto administrativo, se distribuye de la forma siguiente: Original para el archivo de la Secretaría General, la primera copia  para el Departamento de Tesorería y Presupuesto, la segunda, copia para el archivo de la Vicerrectoría Estudiantil, la tercera, para la O.E. interesada y la cuarta para la unidad de Gobierno Transparente.
+	Luego de que quien dirige la Vicerrectoría de Desarrollo Estudiantil verifica y aprueba la solicitud de Fondo, emite una Resolución Exenta, una original y cuatro copias las cuales son enviadas a Contraloría de la Universidad de Talca para su respectivo control de legalidad. 
+	
+	Una vez tramitado el acto administrativo, se debe distribuir los documentos anteriormente mencionados, de la siguiente forma: el documento original para el archivo de la Secretaría General, la primera copia para el Departamento de Tesorería y Presupuesto, la segunda, para el archivo de la Vicerrectoría Estudiantil, la tercera, la O.E. interesada y la cuarta, para la unidad de Gobierno Transparente 
 
-	Se puede apreciar con mayor detalle en la \textbf{Figura \ref{Solicitud_Federacion}}.
+	Se puede apreciar con mayor detalle en la \textbf{Figura \ref{fig: Solicitud_Federacion}}.
 
 	\task \textbf{Caso de Centros de Alumnos}
 
-	Se debe efectuar por escrito una solicitud de fondos al Director de Escuela respectivo, quién eleva la solicitud al Decano de la Facultad correspondiente o al Vicerrector de Desarrollo Estudiantil para el caso de las Escuelas no adscritas a una Facultad.
+	Solo el Presidente, Tesorero o Secretario de finanzas deben solicitar por escrito Fondos para realizar actividades. Esta solicitud se envía a quien dirige la Dirección de Escuela correspondiente al menos 20 días antes del inicio de la actividad. 
 
-	El Decano o Vicerrector de Desarrollo Estudiantil procede a emitir una Resolución Exenta que transfiere los fondos para la actividad aprobada. Esta Resolución es emitida en original y cuatro copias, debiendo remitirse a controlaría universitaria para el respectivo control de legalidad.
+	Quien dirige la Dirección de Escuela, una vez que verifica la solicitud enviada por el CAA, eleva la solicitud a quien dirige la Decanatura de la Facultad o a quien dirige la Vicerrectoría de Desarrollo Estudiantil (para el caso de las Escuelas no adscritas a una Facultad).
 
-	Una vez aprobada por Contraloría Interna y totalmente tramitada es enviada a Decano para su distribución de la siguiente forma: Original para Decanato, la primera copia para el Departamento de Tesorería y Presupuesto, la segunda copia para el archivo de la Facultad, la tercera copia es para la O.E. interesada y la cuarta a la Unidad de Gobierno Transparente.
+	Luego de que, quien dirige la Decanatura de la Facultad o Vicerrectoría de Desarrollo Estudiantil según corresponda, verifique y apruebe la solicitud de Fondo enviada por quien dirige la Dirección de Escuela, emite una Resolución Exenta, una original y cuatro copias, las cuales son enviadas a controlaría universitaria para el respectivo control de legalidad.
 
-	Se puede apreciar con mayor detalle en la \textbf{Figura \ref{Solicitud_CAA}}.
+	Una vez aprobada por Contraloría Interna y totalmente tramitada, es enviada a Decano para su distribución de la siguiente forma: la documentación original para Decanato, la primera copia para el Departamento de Tesorería y Presupuesto, la segunda para el archivo de la Facultad, la tercera es para la O.E. interesada y la cuarta es enviada a la Unidad de Gobierno Transparente.
+
+	Se puede apreciar con mayor detalle en la \textbf{Figura \ref{fig: Solicitud_CAA}}.
+
 \end{tasks}
 
-\begin{figure}[h!]
+\begin{figure}[p!]
 	\includegraphics[width=\textwidth]{Imagenes/Solicitud_CCAA.jpg}
-	\caption{\label{Solicitud_CAA}Proceso fondos por rendir por parte de CAA.}
+	\caption{\label{fig: Solicitud_CAA}Proceso fondos por rendir por parte de CAA.}
 \end{figure}
 
 En ambos casos, el Departamento de Presupuesto hace responsable de la actividad presupuestaria correspondiente a la O.E que la solicita.
