--- a/Informe/Propuesta/4_Metodologia/2_Metodologia_de_evaluacion_del_proyecto.tex
+++ b/Informe/Propuesta/4_Metodologia/2_Metodologia_de_evaluacion_del_proyecto.tex
@@ -7,9 +7,9 @@
 	%\item Metodología de evaluación basado action research
 %\end{itemize}
 
+Para el proyecto, se utiliza la metodología con experimentos controlados como método de evaluación. Esta maneja pruebas que se hacen bajo condiciones totalmente constante y en algunos casos, puede variar algún factor. El objetivo principal es realizar un muestreo de usuarios conocidos los cuales utilizan el software con pruebas de usabilidad simples, además del cliente.
 
-La metodología de evaluación que se utiliza es la metodología con experimentos controlados (prueba que se realiza bajo condiciones totalmente constante, y en algunos caso se puede variar algún factor). La idea principal es realizar un muestreo de usuarios conocidos quienes utilizar el software y realizaran pruebas de usabilidad simple, además del cliente. 
+Por otra parte, los usuarios que realicen las pruebas de usabilidad  no necesariamente deben ser los mismo.
 
-Los usuarios que realicen las pruebas de usabilidad no necesariamente son los mismos.
+Para finalizar, el motivo por el cual se escoge este metodología de evaluación se debe a que hace posible la comprensión e identificación de las variables que están siendo utilizadas en la construcción del software.  Todo lo anterior se debe ya que, según el artículo \emph{Albert Einstein and Empirical Software Engineering}~\cite{8}, experimentar con la construcción de software permite ``Aumetar la compresion de lo que hace al software bueno y cómo hacer un software bien''\footnote{Gain more understanding of what makes software ``good'' and how to make software well.}
 
-Se escoge esta metodología debido a que hace posible la comprensión e identificación de las variables que están siendo utilizadas en la construcción del software. Según el artículo \emph{Albert Einstein and Empirical Software Engineering}~\cite{8}, experimentar con la construcción de software permite ``Aumetar la compresion de lo que hace al software bueno y cómo hacer un software bien''\footnote{Gain more understanding of what makes software ``good'' and how to make software well.}
