--- a/Informe/Propuesta/4_Metodologia/1_Metodologia_de_desarrollo.tex
+++ b/Informe/Propuesta/4_Metodologia/1_Metodologia_de_desarrollo.tex
@@ -4,26 +4,26 @@
 
 La metodología a utilizar es la metodología de desarrollo ágil Melé\footnote{Desde la Séptima Edición del libro ``Ingenieria del software. Un enfoque practico.'' del Ph.D. Roger S. Pressman, es llamado Scrum }~\cite{7}.
 
-Los principios de esta metodología guían las actividades dentro de un proceso que incorpora las siguientes actividades del marco de trabajo: \emph{requisitos, análisis, diseño, evolución y entrega}. En cada actividad mencionadas anteriormente, suceden dentro del patrón de proceso llamado \emph{Sprint}. El trabajo realizado en un Sprint se adapta al problema y con frecuencia se modifica en tiempo real.
+Dicha metodología, tiene como objetivo guiar las actividades en un margen que incorpora las siguientes acciones del marco de trabajo: \emph{requisitos, análisis, diseño, evolución y entrega}. En cada actividad mencionada anteriormente, ocurren dentro de un proceso conocido como \emph{Sprint}. El beneficio que tiene el trabajo realizado dentro del proceso mencionado con anterioridad  es que se adapta al problema y con frecuencia se modifica en tiempo real.
 
 \begin{figure}[!hb]
 	\includegraphics[width=\textwidth]{Imagenes/mele.jpg}
-	\caption{\label{procesoMele} Proceso de metodología Melé.}
+	\caption{\label{fig: procesoMele} Proceso de metodología Melé.}
 \end{figure}
 
-En la \textbf{Figura~\ref{procesoMele}} se puede observar que Melé tiene un conjunto de \emph{``patrones de proceso de software''} los cuales define un conjunto de actividades de desarrollo:
+En la \textbf{Figura~\ref{fig: procesoMele}} se puede observar que Melé tiene un conjunto de \emph{``patrones de proceso de software''} los cuales define un conjunto de actividades de desarrollo:
 
 \begin{itemize}
 	\item 	\begin{description}
-			    \item[Retrasos:] lista que considera la prioridad de los requisitos o características del proyecto que proporcionan valor comercial para el cliente. En cualquier momento se pueden agregar elementos a los retrasos. El gerente de producto evalúa los retrasos y actualiza las prioridades de acuerdo con lo requerido. 
+				\item[Retrasos:] lista de requisitos o características del proyecto ordenadas por prioridad, los cuales proporcionan valor comercial para el cliente. Además, en cualquier momento se pueden agregar elementos a los retrasos. Por otra parte, el gerente del proyecto, evalúa los retrasos y actualiza las prioridades de esta lista de acuerdo con lo requerido. 
 			\end{description}
 
 	\item 	\begin{description}
-			    \item[Sprint:] unidades de trabajo que se requieren para satisfacer un requisito definido en los retrasos en un periodo predefinido (el lapso usual es de 30 días). En esta etapa, los elementos de los retrasos a los que se dirigen las unidades de trabajo del Sprint están congelados (es decir, durante el Sprint no se introducen cambios). Por lo tanto, el Sprint permite trabajar en un ambiente enfocado al corto plazo, pero estable.
+				\item[Sprint:] proceso por el cual se requiere satisfacer un requisito definido en los retrasos en un periodo predefinido (usualmente es de 30 días). Cuando se comienza un Sprint, no se pueden agregar nuevos cambios. Por lo tanto, esto permite trabajar en un ambiente enfocado a corto plazo, pero estable.
 			\end{description}
 
 	\item 	\begin{description}
-			    \item[Reuniones:] reuniones cortas (por lo general 15 minutos) y las realiza a diario el equipo de Melé. Existen 3 preguntas que plantean y responden todos los miembros del equipo:
+			    \item[Reuniones:] juntas de corto periodo (por lo general 15 minutos) las cuales se realizan a diario por el equipo de Melé, en donde todos los miembros del equipo se deben plantear y responder las 3 siguientes preguntas: 
 
 			    \begin{itemize}
 			    	\item ¿Qué hiciste desde la última reunión?
@@ -37,11 +37,9 @@ En la \textbf{Figura~\ref{procesoMele}} se puede observar que Melé tiene un con
 			\end{description}
 
 	\item 	\begin{description}
-			    \item[Demostración:] se entrega el incremento del software al cliente de forma que éste demuestre y evalúe la funcionalidad implementada. Es importante señalar que la demostración quizá no contenga toda la funcionalidad planteada, sino aquellas funciones susceptibles de entregarse dentro del periodo establecido.
+				\item[Demostración:] entrega de incremento del software al cliente de tal manera que éste evalúe la funcionalidad implementada. Cabe destacar la posibilidad de que la demostración no contenga toda la funcionalidad planteada, sino que aquellas funciones susceptible de entregarse dentro del periodo establecido.
 			\end{description}
 \end{itemize}
-
-
 
 Los motivos por los cuales se utiliza este método son:
 
